--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,26 @@
+# Any Node Modules
+node_modules/
+
+# Environment Variables
+.env
+.env.prod
+
+# Cached Build
+cache/
+out/
+
+# Vscode
+.vscode/
+
+# huffc artifacts
+artifacts
+
+# Ignore flattened files
+flattened.txt
+
+# Ignore Broadcasts
+broadcast
+
 # Logs
 logs
 *.log
